--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-headroom": "^3.2.3",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.299.0",
-    "next": "^14.0",
+    "next": "16.1.6",
     "next-themes": "^0.2.1",
     "nextjs-current-url": "^1.0.3",
     "react": "^18.2",
@@ -22,19 +22,19 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@sanity/client": "^6.10.0",
+    "@sanity/client": "^7.15.0",
     "@sanity/icons": "^2.0",
     "@sanity/image-url": "1",
     "@sanity/types": "^3.19",
-    "@sanity/ui": "^2.0.0-beta",
+    "@sanity/ui": "^3.1.11",
     "@sanity/vision": "3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "next-sanity": "7",
+    "next-sanity": "^12.1.0",
     "postcss": "^8",
-    "sanity": "3",
+    "sanity": "^5.9.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
