--- a/package.json
+++ b/package.json
@@ -9,16 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@tailwindcss/postcss": "^4",
     "@types/react-headroom": "^3.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.16",
-    "lucide-react": "^0.299.0",
+    "lucide-react": "^0.574.0",
     "next": "16.1.6",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.4.6",
     "nextjs-current-url": "^1.0.3",
     "react": "^18.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.71.1",
     "react-icons": "4.12.0",
+    "shadcn": "^3.8.5",
+    "sonner": "^2.0.7",
     "styled-components": "6",
+    "tailwind-merge": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.3.6",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -35,7 +55,7 @@
     "next-sanity": "^12.1.0",
     "postcss": "^8",
     "sanity": "^5.9.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
